Removed unused picture, updated README, applied generic suggestions from the IDE in the backend